fix bug of menu visibility

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -675,9 +675,13 @@ nav {
   .grid-link span:active {
     color: black;
   }
+.grid-link-svg {
+    overflow: visible;
+  }
 .grid-link-path {
     stroke: #000;
     -webkit-filter: drop-shadow(0px 0px 30px #00000000);
+    overflow: visible;
   }
 #grid-link-0 .grid-link-path {
     stroke: #fbe106;
@@ -787,6 +791,9 @@ nav {
 .top-\[50\%\] {
   top: 50%;
 }
+.right-\[0\] {
+  right: 0;
+}
 .z-50 {
   z-index: 50;
 }
@@ -801,6 +808,9 @@ nav {
 }
 .z-\[70\] {
   z-index: 70;
+}
+.z-\[99\] {
+  z-index: 99;
 }
 .m-auto {
   margin: auto;
@@ -1355,47 +1365,59 @@ nav {
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .hover\:col-unset:hover {
     color: unset;
   }
+
 .hover\:bg-unset:hover {
     background: unset;
   }
+
 .hover\:bg-hover:hover {
     background-color: var(--hover-bgcolor);
   }
+
 .hover\:cursor-next:hover {
     cursor: e-resize;
   }
+
 .hover\:cursor-prev:hover {
     cursor: w-resize;
   }
+
 .hover\:bg-black:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
+
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
+
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+
 .hover\:shadow:hover {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 .group:hover .group-hover\:opacity-\[100\%\] {
   opacity: 100%;
 }
+
 @media (min-width: 640px) {
 
   .sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
+
 @media (min-width: 768px) {
 
   .md\:w-\[180px\] {
@@ -1416,6 +1438,7 @@ nav {
     padding-bottom: 2rem;
   }
 }
+
 @media (min-width: 1024px) {
 
   .lg\:max-w-6xl {
