--- a/styles/app.css
+++ b/styles/app.css
@@ -288,9 +288,14 @@
     color: black;
   }
 
+  .grid-link-svg {
+    overflow: visible;
+  }
+
   .grid-link-path {
     stroke: #000;
     -webkit-filter: drop-shadow(0px 0px 30px #00000000);
+    overflow: visible;
   }
 
   #grid-link-0 .grid-link-path {
